fixed button not being aligned <1350px

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -967,6 +967,10 @@ label[for="burger"] {
     .laser__intro-p2 {
         padding: 0px 20px 20px 35px;
     }
+
+    .laser__intro-btn {
+        margin: 0px 20px 60px 35px;
+    }
 }
 
 @media only screen and (max-width: 1152px) {
